# spotify-visualization

./: .gitignore  Makefile  README.md  pyproject.toml
spotify_tableau_project/api/: spotify_web_api.py
spotify_tableau_project/data_handling/: spotify_streaming.py  streaming_to_excel.py  streaming_to_json.py
spotify_tableau_project/tests/: test_api.py  test_data_handling.py
spotify_tableau_project/utils/: constants.py  functions.py
spotify_visualization_project/: __main__.py
spotify_visualization_project/api/: spotify_web_api.py
spotify_visualization_project/data/raw/: 2023.json
spotify_visualization_project/data_handling/: spotify_streaming.py  streaming_to_excel.py
spotify_visualization_project/tests/: test_api.py
spotify_visualization_project/utils/: constants.py  functions.py
